# dtkaudiomanager

./: CMakeLists.txt  检测音频设备是否在线.md
.reuse/: dep5
audiomanager-example/: CMakeLists.txt
dde-daemon/: CMakeLists.txt  daemonaudio.json  daemonhelpers.hpp  daudiocard_daemon.cpp  daudiocard_daemon.h  daudiodevice_daemon.cpp  daudiodevice_daemon.h  daudiomanager_daemon.cpp  daudiomanager_daemon.h  daudioplugin_daemon.cpp  daudioplugin_daemon.h  daudioport_daemon.cpp  daudioport_daemon.h  daudiostream_daemon.cpp  daudiostream_daemon.h
docs/: CMakeLists.txt  demo.en_US.dox  demo.zh_CN.dox
examples/: CMakeLists.txt  main.cpp
include/: daudio_p.h  daudiocard.h  daudiocard_p.h  daudiodevice.h  daudiodevice_p.h  daudiofactory_p.h  daudiomanager.h  daudiomanager_p.h  daudioplugin_p.h  daudioport.h  daudioport_p.h  daudiostream.h  daudiostream_p.h  dtkaudiomanager_global.h
src/: CMakeLists.txt  daudiocard.cpp  daudiodevice.cpp  daudiofactory.cpp  daudiomanager.cpp  daudioplugin.cpp  daudioport.cpp  daudiostream.cpp  dpulseaudio.cpp
tests/: CMakeLists.txt  ut-daudiocard.cpp  ut-daudiodevice.cpp  ut-daudiohelpers.hpp  ut-daudiomanager.cpp  ut-daudioport.cpp  ut-daudiostream.cpp
